argocd/hello/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: hello 
spec:
  replicas: 3
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello-ingress
        # this is an image variant of nginxdemos/hello that runs unprivileged
        image: shiwaforce/openshift-nginx-hello
        ports:
        - containerPort: 8080
