argocd/hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: hello
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: hello
